--- a/scss/config.scss
+++ b/scss/config.scss
@@ -5,6 +5,14 @@ $montserrat: 'Montserrat', sans-serif;
 
 
 // ?Colors
-$background: #FAFAFA;
+$white: #FAFAFA;
 $black: #000000;
 $gray: #A9A9A9;
+$special_color: #EE402C;
+
+// ?Screens
+
+$deskto1: 1440px;
+$deskto2: 1370px;
+$deskto3: 110px;
+$mobile: 768px;
