--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -104,6 +104,9 @@ section {
                 }
             }
         }
+        .new_column {
+            display: none;
+        }
         .column_down {
             margin-top: 8rem;
         }
@@ -121,6 +124,86 @@ footer {
         a {
             color: $special_color;
             text-decoration: none;
+        }
+    }
+}
+
+// Media Quries
+@media screen and (max-width: $deskto2) {
+    aside {
+        width: 70%;
+        .box-left {
+            width: 55%;
+        }
+    }
+
+    section {
+        margin: 0 9rem 10rem;
+    }
+}
+
+@media screen and (max-width: $deskto3) {
+    aside {
+        width: 75%;
+        .box-right {
+            width: 60%;
+        }
+    }
+
+    section {
+        width: 80%;
+        margin: 0 4.1rem 8rem;
+    }
+}
+
+@media screen and (max-width: $mobile) {
+    aside {
+        width: 100%;
+        flex-direction: column;
+        padding: 0.5rem;
+        margin: 0 auto;
+        .box-left {
+            width: 100%;
+        }
+        .box-right {
+            width: 90%;
+            p {
+                font-size: 14px;
+            }
+        }
+    }
+
+    section {
+        margin: 2rem 0.8rem 1rem;
+        width: 100%;
+        height: 60rem;
+        .photos {
+            .column {
+                display: none;
+            }
+            .new_column {
+                display: block;
+                .photo {
+                    margin: 0 0 -5rem 0;
+                    width: 154px;
+                    .left {
+                        img {
+                            width: 138.72px;
+                            height: 209px;
+                        }
+                    }
+                    .right {
+                        .profession {
+                            margin-left: 15px;
+                            font-size: 10px;
+                            width: 100px;
+                        }
+                    }
+                }
+            }
+            .column_down {
+                margin-top: 3rem;
+            }
         }
     }
 }
